# CSC-698-Term-Project

./: .gitignore  CMakeLists.txt  README.md
driver/: CMakeLists.txt  benchmark  benchmark.c
matmul/: CMakeLists.txt  dgemm-blocked-unrolled-pthreads.c  dgemm-blocked-unrolled-simd.c  dgemm-blocked.c  dgemm-blocked_naive.c  dgemm-naive-openmp.c  dgemm-naive-pthreads.c  dgemm-naive.c  dgemm-simd.c
plotscript/: README.md  plot.py
